--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,42 +1,42 @@
-.not-header {
-    width: 90%;
+.header {
+    width: 100%;
     background-color: #ffe7ce;
     border-radius: 0 0 16px 16px;
     padding: 1rem 0;
     margin: 0 auto;
 }
 
-.not-header-container {
+.header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1600px;
+    max-width: 1800px;
     width: 100%;
     margin: 0 auto;
     padding: 0 2rem;
     box-sizing: border-box;
-    gap: 1rem;
+    gap: 2rem;
 }
 
-.not-logo-image {
+.logo-image {
     height: 40px;
     margin: 0 auto;
 }
 
-.not-logo {
+.logo {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.not-logo-text {
+.logo-text {
     color: #000;
     margin: 0;
     font-size: 1.5rem;
     font-weight: bold;
 }
 
-.not-nav-menu {
+.nav-menu {
     display: flex;
     gap: 2rem;
     flex-wrap: wrap;
@@ -44,7 +44,7 @@
     justify-content: center;
 }
 
-.not-nav-link {
+.nav-link ,.search-btn {
     height: 100%;
     height: 45px;
     display: flex;
@@ -55,42 +55,25 @@
     transition: color 0.3s;
 }
 
-.not-nav-link:hover {
+.nav-link:hover, .search-btn:hover {
     color: #ff6600;
 }
 
-.not-auth-buttons {
-    display: flex;
-    width: 18%;
-    gap: 1rem;
-    flex-shrink: 0;
-    white-space: nowrap;
-}
+.btn-cart {
 
-.not-btn-login,
-.not-btn-signup {
-    padding: 0.75rem 1.5rem;
     border: none;
-    border-radius: 5px;
-    background-color: #ff7b00;
-    color: #ffffff;
-    font-size: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-    white-space: nowrap;
     flex-shrink: 0;
 }
 
-.not-btn-login {
-    flex: 1;
-}
-
-.not-btn-signup {
-    flex: 2;
-}
-
-.not-btn-login:hover,
-.not-btn-signup:hover {
-    background-color: #ffffff;
-    color: #000000;
+.search-input {
+    color:#000;
+    background-color: #ff6600;
+    border: none;
+    outline: none;
+    padding: 0 1rem;
+    height: 45px;
+    border-radius: 45px;
+    font-size: 1rem;
+    width: 300px;
 }
