--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+p {color: #000}
+
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -44,6 +47,10 @@ button {
   font-family: inherit;
   cursor: pointer;
 } 
+
+input:focus {
+  outline: none;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
