--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,6 +8,7 @@
 
 .header-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     max-width: 1600px;
