--- a/src/components/Categories/style.css
+++ b/src/components/Categories/style.css
@@ -1,8 +1,9 @@
 .categories-container {
+    margin: 20px auto;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    margin-bottom: 20px;
+    max-width: 1600px;
 }
 
 .category-container {
@@ -32,7 +33,7 @@
 
 .category-checkbox:checked + .category-label::before {
     content: "✔";
-    color: #000000;
+    color: #000;
     font-size: 18px;
     text-align: center;
     line-height: 20px;
