--- a/src/pages/Books/style.css
+++ b/src/pages/Books/style.css
@@ -1,4 +1,8 @@
 .books-container {
     max-width: 1600px;
     margin: 40px auto;
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
