--- a/src/components/NotLoginedHeader/style.css
+++ b/src/components/NotLoginedHeader/style.css
@@ -71,6 +71,7 @@
 
 .not-btn-login,
 .not-btn-signup {
+    text-align: center;
     padding: 0.75rem 1.5rem;
     border: none;
     border-radius: 5px;
